--- a/css/default.css
+++ b/css/default.css
@@ -22,14 +22,14 @@
 }
 
 .ajaxCRUD th{
-	background: #CFDBF3;
+	background:#CC9999;	
 	font-weight: bold;
-	color:#445276;
+	color:#000000;
 	font-size: 12px;
 }
 
 .ajaxCRUD th a{
-	color: #173D7F;
+	color: #000000;
 }
 
 .ajaxCRUD td a{
@@ -45,7 +45,7 @@
 
 .ajaxCRUD td{
 	font-family: Arial, Verdana;
-	font-size: 11px;
+	font-size: 12px;
 	background: #F9F8FB;
 	color: #716E6E;
 	font-weight:normal;
