--- a/css/default.css
+++ b/css/default.css
@@ -52,11 +52,14 @@
 	/* text-align: center; */
 	vertical-align: middle;
 }
-
+.ajaxCRUD span{
+	color:#000;
+}
 .ajaxCRUD td, .ajaxCRUD th{
 	padding: 5px 5px;
 }
 table td.odd, table tr.odd, tr.odd td, tbody tr.odd th{
+	color:#000;
 	background-color: #f2f2f2;
 }
 
