--- a/css/layout.css
+++ b/css/layout.css
@@ -80,7 +80,7 @@
 
 /*	=FORMS
 ========================================================================== */
-	form 							{ margin-left: auto; margin-right: auto; width: 768px;}
+	form 							{ margin-left: auto; margin-right: auto; width: 790px;}
 	fieldset 							{ border: 0; margin: 0; padding: 0; }
 	label 							{ cursor: pointer; }
 	legend 							{ border: 0; *margin-left: -7px; padding: 0; }
@@ -380,7 +380,7 @@
 	padding-left:5px;
 	}
 	.customTable td {
-	padding: 10px 10px;
+	width:20px;
 	font-family: Arial, Verdana;
 	font-size: 11px;
 	color: #716E6E;
@@ -395,10 +395,12 @@
 	/*  Define the background color for all the ODD background rows  */
 	.customTable tr:nth-child(odd){ 
 	background-color: #DDD7D4;
+	color:#444444;
+	font-weight:bold;
 	}
 	/*  Define the background color for all the EVEN background rows  */
 	.customTable tr:nth-child(even){
-		background: #FFFFFF;
+		background: #F9F8FB;
 	}
 
 .ajaxCRUD {
