--- a/css/layout.css
+++ b/css/layout.css
@@ -380,16 +380,19 @@
 	padding-left:5px;
 	}
 	.customTable td {
-	width:20px;
 	font-family: Arial, Verdana;
 	font-size: 11px;
 	font-weight:normal;
+	text-align:center;
 	/* text-align: center; */
 	vertical-align: middle;
+	max-width: 20px;
+    overflow: hidden;
 	}
 	/* provide some minimal visual accomodation for IE8 and below */
 	.customTable tr{
 		background: #b8d1f3;
+		text-align:center;
 	}
 	/*  Define the background color for all the ODD background rows  */
 	.customTable tr:nth-child(odd){ 
@@ -437,6 +440,7 @@
 }
 
 .ajaxCRUD td{
+    overflow: hidden;
 	font-family: Arial, Verdana;
 	font-size: 11px;
 	background: #F9F8FB;
@@ -444,6 +448,9 @@
 	font-weight:normal;
 	/* text-align: center; */
 	vertical-align: middle;
+	max-width: 80px;
+    overflow: hidden;
+    text-align:center;
 }
 
 .ajaxCRUD td, .ajaxCRUD th{
@@ -453,6 +460,9 @@
 table td.odd, table tr.odd, tr.odd td, tbody tr.odd th{
 	background-color: #DDD7D4;
 	color:#444444;
+	max-width: 80px;
+    overflow: hidden;
+    text-align:center;
 }
 
 .editingSize{
