--- a/css/layout.css
+++ b/css/layout.css
@@ -84,9 +84,9 @@
 	fieldset 							{ border: 0; margin: 0; padding: 0; }
 	label 							{ cursor: pointer; }
 	legend 							{ border: 0; *margin-left: -7px; padding: 0; }
-	button, password, textarea ,radio		{ font-size: 100%; margin: 0;  vertical-align: baseline; *vertical-align: middle; outline:none; }
-	input 						{ font-size: 11px; margin: 0;  width: 70px; vertical-align: baseline; *vertical-align: middle; outline:none; }
-	select 						{ font-size: 11px; margin: 0;  width: 90px; vertical-align: baseline; *vertical-align: middle; outline:none; }
+	button, password, input, textarea ,radio		{ font-size: 100%; margin: 0; vertical-align: baseline; *vertical-align: middle; outline:none; }
+	select 						{ font-size: 11px; margin: 0;  width: 110px; vertical-align: baseline; *vertical-align: middle; outline:none; }
+
 	button, password, input 						{ line-height: normal; *overflow: visible; }
 	table button, table input 			{ *overflow: auto;  }
 	button, input[type="button"], input[type="reset"], input[type="submit"] 
