--- a/css/layout.css
+++ b/css/layout.css
@@ -84,8 +84,8 @@
 	fieldset 							{ border: 0; margin: 0; padding: 0; }
 	label 							{ cursor: pointer; }
 	legend 							{ border: 0; *margin-left: -7px; padding: 0; }
-	button, password, input, textarea ,radio		{ font-size: 100%; margin: 0; vertical-align: baseline; *vertical-align: middle; outline:none; }
-	select 						{ font-size: 11px; margin: 0;  width: 110px; vertical-align: baseline; *vertical-align: middle; outline:none; }
+	button, password, input, textarea ,radio		{ font-size: 80%; margin: 0; vertical-align: baseline; *vertical-align: middle; outline:none; }
+	select 						{ font-size: 11px; margin: 0;  width: 100px; vertical-align: baseline; *vertical-align: middle; outline:none; }
 
 	button, password, input 						{ line-height: normal; *overflow: visible; }
 	table button, table input 			{ *overflow: auto;  }
@@ -97,8 +97,8 @@
 	input[type="search"]::-webkit-search-decoration { -webkit-appearance: none; }
 	button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
 	textarea 							{ overflow: auto; vertical-align: top; resize: vertical; 
-									  background:#fefeed; padding:6px 5px 5px; color:#a59e9b; font-size:12px; border:6px solid #ddd7d4; -webkit-border-radius:6px; 
-									  -moz-border-radius:6px; border-radius:6px;-moz-background-clip: padding; -webkit-background-clip: padding-box; 
+									  background:#fefeed; padding:3px 2px 2px; color:#a59e9b; font-size:11px; border:3px solid #ddd7d4; -webkit-border-radius:3px; 
+									  -moz-border-radius:3px; border-radius:3px;-moz-background-clip: padding; -webkit-background-clip: padding-box; 
 									  background-clip: padding-box; -moz-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); -webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2);
 									}
 	input:valid, textarea:valid 		{ }
@@ -107,15 +107,15 @@
 	input::-webkit-input-placeholder 	{ color: #a59e9b; }
 	input:-moz-placeholder  			{ color: #a59e9b; }
 
-	input[type="text"], select			{ background:#fefeed; padding:6px 5px 5px; color:#a59e9b; font-size:12px; border:6px solid #ddd7d4; -webkit-border-radius:6px; -moz-border-radius:6px; border-radius:6px;-moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box; -moz-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); -webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2);}
-	input[type="password"], select			{ background:#fefeed; padding:6px 5px 5px; color:#a59e9b; font-size:12px; border:6px solid #ddd7d4; -webkit-border-radius:6px; -moz-border-radius:6px; border-radius:6px;-moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box; -moz-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); -webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2);}
+	input[type="text"], select			{ background:#fefeed; padding:3px 2px 2px; color:#a59e9b; font-size:11px; border:3px solid #ddd7d4; -webkit-border-radius:3px; -moz-border-radius:3px; border-radius:3px;-moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box; -moz-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); -webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2);}
+	input[type="password"], select			{ background:#fefeed; padding:3px 2px 2px; color:#a59e9b; font-size:11px; border:3px solid #ddd7d4; -webkit-border-radius:3px; -moz-border-radius:3px; border-radius:3px;-moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box; -moz-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); -webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2);}
 /*	
 	input[type="file"]				{ width: 200px; background:#fefeed; padding:6px 5px 5px; color:#a59e9b; font-size:15px; border:6px solid #ddd7d4; -webkit-border-radius:6px; -moz-border-radius:6px; border-radius:6px;-moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box; -moz-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); -webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2);}
 
 	/* The ", textarea" clause doesn't seem to work with FF v14. I broke it into a separate line of CSS and change type="textarea"*/
-	input[type="textarea"]			{ background:#fefeed; padding:6px 5px 5px; color:#a59e9b; font-size:12px; border:6px solid #ddd7d4; -webkit-border-radius:6px; -moz-border-radius:6px; border-radius:6px;-moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box; -moz-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); -webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2);}*/
+	input[type="textarea"]			{ background:#fefeed; padding:3px 2px 2px; color:#a59e9b; font-size:11px; border:3px solid #ddd7d4; -webkit-border-radius:3px; -moz-border-radius:3px; border-radius:3px;-moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box; -moz-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); -webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2);}*/
 
-	input[type="radio"]				{ background:#fefeed; padding:6px 5px 5px; color:#a59e9b; font-size:12px; border:6px solid #ddd7d4; -webkit-border-radius:6px; -moz-border-radius:6px; border-radius:6px;-moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box; -moz-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); -webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2);}*/
+	input[type="radio"]				{ background:#fefeed; padding:3px 2px 2px; color:#a59e9b; font-size:11px; border:3px solid #ddd7d4; -webkit-border-radius:3px; -moz-border-radius:3px; border-radius:3px;-moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box; -moz-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); -webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2); box-shadow: 0 1px 0 rgba(255,255,255,0.4), inset 0 4px 4px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.2);}*/
 
 	input:required					{ background:#fefeed;}
 	input:focus, select:focus, textarea:focus, file:focus	radio:focus { border-color:#c6bebb; color:#5f5856;}
@@ -356,13 +356,6 @@
     color: #000;
 }
 	
-
-
-/*
-	HUNDREDS of other stylesheets which work with this class can be found here - http://icant.co.uk/csstablegallery
-	Try a few demos using the style dropdown box for our demo here - http://www.ajaxcrud.com/
-*/
-
 .paging_links{
 	font-family:Verdana, Arial, Helvetica, sans-serif;
 	font-size:10px;
@@ -418,6 +411,8 @@
 	border-collapse:collapse;
 	margin-top:10px;
 	margin-bottom:10px;
+	max-width: 880;
+    overflow: hidden;
 }
 
 .ajaxCRUD th{
@@ -443,30 +438,27 @@
 }
 
 .ajaxCRUD td{
-    overflow: hidden;
 	font-family: Arial, Verdana;
 	font-size: 11px;
 	background: #F9F8FB;
 	color: #716E6E;
 	font-weight:normal;
-	/* text-align: center; */
 	vertical-align: middle;
-	max-width: 80px;
+	max-width: 100px;
     overflow: hidden;
     text-align:center;
 }
 
 .ajaxCRUD td, .ajaxCRUD th{
-	padding: 5px 5px;
+	padding: 3px 3px;
 }
 
 table td.odd, table tr.odd, tr.odd td, tbody tr.odd th{
 	background-color: #DDD7D4;
 	color:#444444;
-	max-width: 80px;
-    overflow: hidden;
+	
     text-align:center;
-   	padding-right: 10px;
+   	padding-right: 5px;
 }
 
 .editingSize{
